# myx

./: .dockerignore  .env.example  .gitignore  AGENT_API_ACCESS_ANALYSIS.md  AGENT_API_EXPLANATION.md  AGENT_API_USAGE_ANALYSIS.md  AGENT_SYSTEM.md  AGENT_VIEWS_ANALYSIS.md  AGENT_WEB_SERVICE_ARCHITECTURE.md  ARCHITECTURE.md  CLOUDFLARE_DNS_DESIGN.md  DEPLOY_DOCKER.md  README.md  README_GITHUB.md  RELEASE.md  VERIFY_AGENT_DEPLOYMENT.md  build_agent.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  start_backend.sh  start_frontend.sh
.cursor/plans/: 重构agent使用http和标准库_e7c3ec1c.plan.md
.github/: README.md
.github/workflows/: README.md  build-agent.yml  build-backend.yml  docker-agent.yml  docker-all.yml  docker-frontend.yml  release.yml
agent/: Dockerfile  Makefile  README.md  main.go
agent-go/: Dockerfile  TODO.MD  go.mod  main.go
agent-python/: main.py
backend/: Dockerfile  create_default_user.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/utils/: caddy_config.py  subscription.py  xray_config.py
deployment-tool/: README.md  ansible.cfg
deployment-tool/agent/: README.md  ansible_executor.py  http_server.py  main.py  pyproject.toml  requirements.txt  rpc_client.py  rpc_server.py  setup.py
deployment-tool/playbooks/: check_agent_prerequisites.yml  (+8 more)
docs/: AGENT_SYSTEM.md  ARCHITECTURE.md  CLOUDFLARE_AGENT_DOMAIN_DESIGN.md  DEPLOY_DOCKER.md  PUSH_TO_GITHUB.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+150 files in other folders)
