[project]
name = "myx-agent"
version = "1.0.0"
description = "MyX Agent - Python版本，无状态Agent，被动等待服务器连接"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "flask>=3.0.0",
    "cryptography>=41.0.0",
    "pyopenssl>=23.3.0",
    "jsonrpc>=1.0.0",
    "ansible-runner>=2.3.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]

